[package]
name = "twitch-oauth-async-std"
version = "0.1.0"
authors = ["Nerothos"]
edition = "2018"
documentation = "https://docs.rs/twitch-oauth-async-std"
readme = "README.md"
repository = "https://github.com/nerothos/twitch-oauth-async-std"
keywords = ["api", "oauth", "twitch"]
license = "MIT"
description = "Async-std compatible Rust crate to request a Twitch OAuth token using Surf"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.0.0-alpha.4"
serde = "1.0.111"
async-std = "1.6.1"
url = "2.1.1"