[package]
name = "twitch-oauth-async-std"
version = "0.1.1"
authors = ["Nerothos"]
edition = "2018"
documentation = "https://docs.rs/twitch-oauth-async-std"
readme = "README.md"
repository = "https://github.com/nerothos/twitch-oauth-async-std"
keywords = ["api", "oauth", "twitch"]
license = "MIT"
description = "Async-std compatible Rust crate to request a Twitch OAuth token using Surf"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.2.0"
serde = "1.0.126"
async-std = "1.9.0"
url = "2.2.2"